--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "private": true,
+  "homepage": "https://matisancassani.github.io/coder-react/build",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
